--- a/ProyectoDS_ParteI_Siciliano.ipynb
+++ b/ProyectoDS_ParteI_Siciliano.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/NazarenoSiciliano/Data-science-I/blob/main/ProyectoDS_ParteI_Siciliano.ipynb",
-      "authorship_tag": "ABX9TyNYlBmN3IPRJu1gwwQIws2v",
+      "authorship_tag": "ABX9TyOn8Ce3bn4IBnWJEAVeO3AB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -100,9 +100,9 @@
           "height": 224
         },
         "id": "0vwk5nHIRGQp",
-        "outputId": "f5b53163-528c-41d0-d5bc-a515a2c60094"
+        "outputId": "e4d40848-1920-47e3-c5e1-a60e8b4751f0"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -138,7 +138,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e81ca8b3-adfe-42aa-a7be-703c31df1150\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-3d8ba4a5-cd86-4ae8-8a24-fae4dfc63fef\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -223,7 +223,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e81ca8b3-adfe-42aa-a7be-703c31df1150')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3d8ba4a5-cd86-4ae8-8a24-fae4dfc63fef')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -275,12 +275,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-e81ca8b3-adfe-42aa-a7be-703c31df1150 button.colab-df-convert');\n",
+              "        document.querySelector('#df-3d8ba4a5-cd86-4ae8-8a24-fae4dfc63fef button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-e81ca8b3-adfe-42aa-a7be-703c31df1150');\n",
+              "        const element = document.querySelector('#df-3d8ba4a5-cd86-4ae8-8a24-fae4dfc63fef');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -300,8 +300,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-3031b20b-b68c-4b27-8ef9-352a08175fbf\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3031b20b-b68c-4b27-8ef9-352a08175fbf')\"\n",
+              "    <div id=\"df-6ce76ceb-0b98-45ab-a4ee-a7e1c7d77af8\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6ce76ceb-0b98-45ab-a4ee-a7e1c7d77af8')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -420,7 +420,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-3031b20b-b68c-4b27-8ef9-352a08175fbf button');\n",
+              "            document.querySelector('#df-6ce76ceb-0b98-45ab-a4ee-a7e1c7d77af8 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -437,7 +437,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 12
         }
       ]
     },
@@ -462,9 +462,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LdSd9ENgTV4g",
-        "outputId": "f97c80fd-eb26-46a4-ed67-a5ab9f9ce234"
+        "outputId": "233da0cf-8cba-4e23-8bc5-d1f58d0fbb1f"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -546,9 +546,9 @@
           "height": 624
         },
         "id": "Zt706T7SaYuX",
-        "outputId": "47b83fca-cb36-4e08-e5d7-01550eb91972"
+        "outputId": "a107beee-9f55-4c68-d817-ebc933b623dd"
       },
-      "execution_count": 9,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -604,14 +604,14 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "A8StghMAnAPt",
-        "outputId": "6901ac43-8e56-49b8-ff71-b83bb2c53185",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 794
-        }
+        },
+        "id": "A8StghMAnAPt",
+        "outputId": "349d5815-149e-4815-b126-c3c4461d8bc7"
       },
-      "execution_count": 10,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -672,14 +672,14 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "ewa02w9CnJh9",
-        "outputId": "34acb9e2-390a-4b14-c295-65f2f95d4443",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 694
-        }
+        },
+        "id": "ewa02w9CnJh9",
+        "outputId": "ae75259d-e020-41a6-9ee1-38b3752b4dc5"
       },
-      "execution_count": 11,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -703,6 +703,34 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Conclusiones del Análisis Descriptivo\n",
+        "Basado en la exploración inicial del dataset de casos de dengue en CABA, se desprenden las siguientes conclusiones para las hipótesis planteadas:\n",
+        "\n",
+        "Evolución temporal de los casos y estacionalidad:\n",
+        "\n",
+        "Los primeros casos confirmados en el período 2024-2025 se detectaron en la semana epidemiológica (SE) 41 de 2024 (inicios de octubre), marcando el inicio del brote en la temporada cálida.\n",
+        "\n",
+        "El pico de incidencia se registró alrededor de la SE 14 de 2025 (finales de marzo/principios de abril), con un total de 18 casos reportados en esa semana. Este patrón confirma la fuerte estacionalidad del dengue, con una concentración máxima de contagios hacia el final del verano y el comienzo del otoño.\n",
+        "\n",
+        "Comunas más afectadas por la incidencia del dengue:\n",
+        "\n",
+        "La Comuna 11 muestra la mayor concentración de casos, con un total de 34 casos confirmados, siendo el área geográfica más impactada por el brote.\n",
+        "\n",
+        "Esto sugiere que la incidencia geográfica es altamente desigual y concentrada, lo que permite focalizar las intervenciones de prevención y control de vectores.\n",
+        "\n",
+        "Distribución de casos por grupo etario:\n",
+        "\n",
+        "El Grupo Etario de 20 a 29 años registra el mayor número de casos, con 13 confirmados.\n",
+        "\n",
+        "Esta concentración en población joven y económicamente activa podría estar relacionada con mayor movilidad o exposición en áreas de trabajo o estudio, lo que requiere campañas de concientización dirigidas a este segmento."
+      ],
+      "metadata": {
+        "id": "uLSy3cUpoLn-"
+      }
     }
   ]
 }
