--- a/ProyectoDS_ParteI_Siciliano.ipynb
+++ b/ProyectoDS_ParteI_Siciliano.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/NazarenoSiciliano/Data-science-I/blob/main/ProyectoDS_ParteI_Siciliano.ipynb",
-      "authorship_tag": "ABX9TyOYNta1bEZHVr8ncwNIPitd",
+      "authorship_tag": "ABX9TyPPuoCTAX2cQ/8QSj4QJcVr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
       "source": [
         "# Proyecto Final - Visualizaciones en Python\n",
         "# Casos dengue en CABA\n",
-        "Primer entrega"
+        "Entrega Final"
       ],
       "metadata": {
         "id": "iK2tVObhRF8Z"
@@ -102,7 +102,7 @@
         "id": "0vwk5nHIRGQp",
         "outputId": "abad59b8-6b9f-4d72-c971-e71ef5068fb5"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -464,7 +464,7 @@
         "id": "LdSd9ENgTV4g",
         "outputId": "730d7558-9a05-4c4f-becc-4f9f9dc93149"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -545,7 +545,7 @@
         "id": "Zt706T7SaYuX",
         "outputId": "a3e7b6f7-83e7-4d90-cdb3-368d65757fe7"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -607,7 +607,7 @@
         "id": "A8StghMAnAPt",
         "outputId": "8a3948f3-679c-46c1-c79e-51f4f264f845"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -673,7 +673,7 @@
         "id": "ewa02w9CnJh9",
         "outputId": "736637e0-61b2-44f8-9a69-8e476744dee1"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
